--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Hash Generator</h1>
+    <h4>Currently Supported Hash are these.</h4>
     <a href="sha256.html">SHA256</a>
+    <a href="sha1.html">SHA1</a>
+    <a href="md5.html">MD5</a>
 </body>
 </html>
