--- a/md5.html
+++ b/md5.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SHA256 Generator</title>
+    <title>MD5 Generator</title>
 </head>
 <body>
     <h1>Hash Generator</h1>
@@ -12,6 +12,7 @@
         <a href="sha256.html">SHA256</a>
         <a href="sha1.html">SHA1</a>
         <a href="md5.html">MD5</a>
+
     </li>
     <label for="input">Input:</label>
     <input type="text" id="input" placeholder="Enter text...">
@@ -29,7 +30,7 @@
     function sha256hash(string) {
         var hexHash = "";
         try {
-            var hash = CryptoJS.SHA256(string);
+            var hash = CryptoJS.MD5(string);
             hexHash = hash.toString(CryptoJS.enc.Hex);
         } catch (error) {
             postMessage("Failed generating SHA256");
