--- a/sha1.html
+++ b/sha1.html
@@ -10,6 +10,8 @@
     <li>    
         <a href="index.html">More Tools</a>
         <a href="sha256.html">SHA256</a>
+        <a href="sha1.html">SHA1</a>
+        <a href="md5.html">MD5</a>
     </li>
     <label for="input">Input:</label>
     <input type="text" id="input" placeholder="Enter text...">
