--- a/sha224.html
+++ b/sha224.html
@@ -3,33 +3,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SHA256 Generator</title>
+    <title>SHA224 Generator</title>
 </head>
 <body>
     <h1>Hash Generator</h1>
     <li>    
         <a href="index.html">More Tools</a>
         <a href="sha256.html">SHA256</a>
+        <a href="sha224.html">SHA224</a>
         <a href="sha1.html">SHA1</a>
         <a href="md5.html">MD5</a>
     </li>
-    <label for="input">Input:</label>
-    <input type="text" id="input" placeholder="Enter text...">
-    <button onclick="generate_hash()">Hash it!</button>
-
-    <p id="output"></p>
+    <label for="auto_update_tick">Auto update:</label>
+    <div class="auto_update_or_not">
+        <input type="checkbox" id="auto_update_tick" checked>
+    </div>
+    <div class="text_to_hash">
+        <label for="input">Input:</label>
+        <div class="input_tth">
+            <textarea id="input" placeholder="Input" data-remember="input" data-share="input"></textarea>
+        </div>
+        <button onclick="generate_hash()">Hash it!</button>
+    </div>
+    <textarea id="output" readonly></textarea>
+    <footer>Copyright &copy; Mani Arasteh</footer>
 </body>
 <script>
     function generate_hash() {
         var input = document.getElementById('input').value;
+        if (input.trim() === "") {
+            document.getElementById("output").innerText = "";
+            return;
+        }
         var sha224 = sha224hash(input);
-        document.getElementById("output").innerText = "SHA224: " + sha256;
+        document.getElementById("output").innerText = "SHA224: " + sha224;
     }
 
     function sha224hash(string) {
         var hexHash = "";
         try {
-            var hash = CryptoJS.SHA1(string);
+            var hash = CryptoJS.SHA224(string);
             hexHash = hash.toString(CryptoJS.enc.Hex);
         } catch (error) {
             postMessage("Failed generating SHA224");
@@ -37,6 +50,19 @@
 
         return hexHash;
     }
+
+    document.addEventListener("DOMContentLoaded", () => {
+        const inputElement = document.getElementById("input");
+        const checkboxElement = document.getElementById("auto_update_tick");
+
+        inputElement.addEventListener("input", () => {
+            if (checkboxElement.checked && inputElement.value.trim() !== "") {
+                generate_hash();
+            } else if (inputElement.value.trim() === "") {
+                document.getElementById("output").innerText = "";
+            }
+        });
+    });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </html>
