--- a/sha224.html
+++ b/sha224.html
@@ -93,10 +93,10 @@
     function create_share_link() {
         if (document.getElementById("username_or_not").checked) {
             if (document.getElementById("username").value != "") {
-                document.getElementById("sharelink").value = ("https://maarasteh.github.io/share.html?input=" + document.getElementById("input").value + "&username=" + document.getElementById("username").value + "&hash=sha244");
+                document.getElementById("sharelink").value = ("https://maarasteh.github.io/hash-generator-html/share.html?input=" + document.getElementById("input").value + "&username=" + document.getElementById("username").value + "&hash=sha244");
             }
         } else {
-            document.getElementById("sharelink").value = ("https://maarasteh.github.io/share.html?input=" + document.getElementById("input").value + "&hash=sha224");
+            document.getElementById("sharelink").value = ("https://maarasteh.github.io/hash-generator-html/share.html?input=" + document.getElementById("input").value + "&hash=sha224");
         }
     }
 </script>
