--- a/sha256.html
+++ b/sha256.html
@@ -95,10 +95,10 @@
         function create_share_link() {
             if (document.getElementById("username_or_not").checked) {
                 if (document.getElementById("username").value != "") {
-                    document.getElementById("sharelink").value = ("https://maarasteh.github.io/share.html?input=" + document.getElementById("input").value + "&username=" + document.getElementById("username").value + "&hash=sha256");
+                    document.getElementById("sharelink").value = ("https://maarasteh.github.io/hash-generator-html/share.html?input=" + document.getElementById("input").value + "&username=" + document.getElementById("username").value + "&hash=sha256");
                 }
             } else {
-                document.getElementById("sharelink").value = ("https://maarasteh.github.io/share.html?input=" + document.getElementById("input").value + "&hash=sha256");
+                document.getElementById("sharelink").value = ("https://maarasteh.github.io/hash-generator-html/share.html?input=" + document.getElementById("input").value + "&hash=sha256");
             }
         }
     </script>
